# wallshuffle

./: .gitignore  AUDIT_CONTEXT.md  AUDIT_REPORT.md  AUDIT_RESULT.md  CHANGELOG.md  LICENSE  MANIFEST.in  MARK_VII_MIGRATION_PLAN.md  Makefile  README.md  build_appimage.sh  build_deb.sh  check_wallpaper_logic.py  debug_gi.py  install.sh  kayab_monitor.py  pyproject.toml  reproduce_checks.py  requirements-dev.txt  requirements.txt  requirements_current.txt  run.py  setup.py  wallpaper-changer.sh  wallshuffle_1.0.0_all.deb  wallshuffle_installed.desktop
.genesis/: audit_schedule
.genesis/patches/: peripheral_vision_v1.1.1.gpatch
.genesis/telemetry/: baseline_metrics.json
.github/workflows/: ci.yml
AppDir/: AppRun
WallShuffle.AppDir/: wallshuffle.desktop
assets/: wallshuffle_installed.desktop
build_deb/DEBIAN/: control  postinst
build_deb/usr/share/applications/: wallshuffle.desktop
build_deb/usr/share/wallshuffle/wallshuffle/: __init__.py  __main__.py  app.py  config_manager.py  constants.py  (+8 more)
config/: config.ini
data/: com.carlos.WallShuffle.desktop  com.carlos.WallShuffle.metainfo.xml
debian/: control
docs/: KAYAB_MARK_VII.md  architecture.md  index.html
flatpak/: com.carlos.WallShuffle.yml
metrics/: acceleration_capture_1767841542.json  acceleration_capture_1767862116.json
scripts/: build_appimage.sh  build_deb.sh  uninstall.sh
squashfs-root/: .DirIcon  AppRun
tests/: test_config_manager.py  test_features.py  test_gui_errors.py  test_headless.py  test_kde_script.py  test_lockfile.py  test_online_sources.py  test_robustness.py  test_theme_engine.py
wallshuffle/: README.md  __init__.py  __main__.py  app.py  config_manager.py  constants.py  core.py  effects.py  gui_helpers.py  online_sources.py  system_integration.py  theme_manager.py  themes.py  ui.py  utils.py  wallpaper_manager.py
wallshuffle/theme_engine/: backend.py  engine.py  events.py  presets.py  renderer.py  resolver.py  spec.py  store.py  validator.py
